Fix name alignement

--- a/web/css/index.less
+++ b/web/css/index.less
@@ -226,6 +226,7 @@ h3 {
       img {
         position: absolute;
         top: 0;
+        left: 0;
         width: 160px;
         height: 160px;
       }
